--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -11,5 +11,5 @@ jobs:
       
     - name: Run ShellCheck
       uses: ludeeus/action-shellcheck@master
-      with:
-        ignore: path/to/ignore
+      # with:
+      #   ignore: path/to/ignore
