--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,4 +7,7 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v2
     - name: Run proselint
+      id: proselint
       uses: ./.github/actions/proselint
+    - name: Get proselint warnings
+      run: echo ${{ steps.proselint.outputs.msg }}
