--- a/.github/actions/proselint/Dockerfile
+++ b/.github/actions/proselint/Dockerfile
@@ -7,5 +7,5 @@ FROM python:3.8-slim
 
 RUN pip install proselint
 COPY entrypoint.sh /entrypoint.sh
-# RUN chmod +x /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 ENTRYPOINT [ "/entrypoint.sh" ]
